[project]
name = "gigaspeech"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-gigachat>=0.5.0",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
]
