[project]
name = "gigaspeech"
version = "0.2.0"
description = "Мультиагентный спичрайтер на LangGraph + GigaChat с MCP-сервером"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-gigachat>=0.5.0",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
    "mcp[cli]>=1.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.7.0",
    "tenacity>=8.0.0",
]

[project.scripts]
speech-writer = "main:main"
speech-writer-mcp = "mcp_server:main"
